--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -922,6 +922,18 @@ label.font-bold {
     border: 2px solid #333333;
 }
 
+.basic-input-text {
+    padding: 2px;
+    font-size: 16px;
+    border-radius: 4px;
+    border: 2px solid #958b7f;
+    box-sizing: border-box;
+}
+
+.basic-input-text:focus {
+    border: 2px solid #333333;
+}
+
 .basic-select {
     padding: 2px;
     font-size: 16px;
