--- a/src/assets/css/modal_area.css
+++ b/src/assets/css/modal_area.css
@@ -559,6 +559,35 @@
         }
     }
 
+    .schedule-save-modal {
+        display: flex;
+        flex-direction: column;
+        background: #ffffff;
+        width: 50%;
+        max-height: 70%;
+        margin: 25% auto;
+        padding: 16px;
+        border-radius: 8px;
+
+        @media (max-width: 600px) {
+            width: 90%;
+            max-height: 90%;
+        }
+
+        .schedule-name-input-area {
+            padding-bottom: 16px;
+        }
+
+        .schedule-name-input {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .basic-input-text {
+            height: 40px;
+        }
+    }
+
     .produce-type-select-modal {
         display: flex;
         flex-direction: column;
