--- a/src/assets/css/modal_area.css
+++ b/src/assets/css/modal_area.css
@@ -583,6 +583,10 @@
             flex-direction: column;
         }
 
+        .schedule-name-insert-area {
+            padding-bottom: 16px;
+        }
+
         .basic-input-text {
             height: 40px;
         }
