--- a/src/assets/css/modal_area.css
+++ b/src/assets/css/modal_area.css
@@ -9,7 +9,7 @@
         z-index: 200;
     }
 
-    .input-modal-window-area {
+    .small-modal-window-area {
         position: fixed;
         top: 0;
         left: 0;
@@ -634,6 +634,186 @@
             justify-content: space-evenly;
         }
     }
+
+    .schedule-open-modal {
+        display: flex;
+        flex-direction: column;
+        background: #ffffff;
+        width: 80%;
+        height: 80%;
+        margin: 10% auto;
+        padding: 16px;
+        border-radius: 8px;
+
+        @media (max-width: 1000px) {
+            margin: 5% auto;
+            width: 90%;
+            height: 90%;
+        }
+
+        .save-list-area {
+            padding-bottom: 8px;
+        }
+
+        .save-list {
+            padding-left: 16px;
+        }
+
+        .idol-list-area {
+            padding-top: 8px;
+        }
+
+        .idol-list {
+            padding-left: 16px;
+        }
+
+        .save-data {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+        }
+
+        .folder-button-area {
+            padding: 0 4px;
+            border-radius: 4px;
+        }
+
+        .folder-button-area:hover {
+            background: rgb(149, 139, 127, 0.3);
+        }
+
+        .folder-button {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: center;
+            background: none;
+            border: none;
+            cursor: pointer;
+            outline: none;
+            padding: 0;
+            appearance: none;
+        }
+
+        .open-button-area {
+            width: 80%;
+            padding: 0 4px;
+            border-radius: 4px;
+
+            @media (max-width: 600px) {
+                width: 70%;
+            }
+        }
+
+        .open-button-area:hover {
+            background: rgb(149, 139, 127, 0.3);
+        }
+
+        .open-button {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: center;
+            background: none;
+            border: none;
+            cursor: pointer;
+            outline: none;
+            padding: 0;
+            appearance: none;
+            color: #0086f0;
+        }
+
+        .open-button.opened {
+            color: #3cc743;
+        }
+
+        .save-data-edit-button-area {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-around;
+        }
+
+        .rename-button-area, .delete-button-area {
+            padding: 0 4px;
+            border-radius: 4px;
+        }
+
+        .rename-button-area:hover, .delete-button-area:hover {
+            background: rgb(149, 139, 127, 0.3);
+        }
+
+        .rename-button, .delete-button {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: center;
+            background: none;
+            border: none;
+            cursor: pointer;
+            outline: none;
+            padding: 0;
+            appearance: none;
+            color: #3cc743;
+        }
+
+        .rename-button:disabled, .delete-button:disabled {
+            cursor: not-allowed;
+            color: #958b7f;
+        }
+
+        .button-text {
+            width: 100%;
+            text-align: left;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+            font-size: 16px;
+            padding-left: 4px;
+            vertical-align: super;
+        }
+    }
+
+    .yes-or-no-modal {
+        display: flex;
+        flex-direction: column;
+        background: #ffffff;
+        width: 30%;
+        margin: 40% auto;
+        padding: 16px;
+        border-radius: 8px;
+
+        @media (max-width: 1000px) {
+            margin: 50% auto;
+        }
+
+        @media (max-width: 600px) {
+            width: 90%;
+        }
+
+        .description-area {
+            padding-bottom: 16px;
+        }
+
+        .input-area {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+        }
+
+        .question-button-area {
+            display: flex;
+            flex-direction: row;
+        }
+
+        .question-button {
+            padding-right: 8px;
+        }
+    }
+
 
     .common-input-modal {
         display: flex;
