button design fix

--- a/src/assets/css/modal_area.css
+++ b/src/assets/css/modal_area.css
@@ -40,7 +40,7 @@
             border-radius: 8px;
         }
 
-        .headline-close-button:hover {
+        .headline-close-button:hover, .headline-close-button:focus {
             background: #efefef;
         }
     }
