--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -934,6 +934,10 @@ label.font-bold {
     border: 2px solid #333333;
 }
 
+.basic-input-range {
+    padding: 8px 0;
+}
+
 .basic-select {
     padding: 2px;
     font-size: 16px;
